# sd

./: Cargo.toml  README.md  analyze_benchmarks.py  benchmark_results.txt  benchmark_summary.md  visualize_ascii.py  visualize_benchmarks.py
benches/: conv_benchmark.rs
cuda-kernels/: Cargo.toml
cuda-kernels/src/: groupnorm.cu  lib.rs  silu.cu
metal-shaders/: README.md  conv2d.metal  conv2d_optimized.metal
src/: cmd.rs  lib.rs  main.rs  resnet.rs  tensor.rs
src/examples/: metal_conv_example.rs  mod.rs
src/layers/: conv.rs  layer.rs  metal_conv.rs  metal_conv_mps.rs  metal_utils.rs  mod.rs  norm.rs  silu.rs
