[package]
name = "sd"
version = "0.1.0"
edition = "2021"

[dependencies]
safetensors = "0.4.5"
memmap2 = "0.9.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
tracing = "0.1"
tracing-subscriber = "0.3"
env_logger = "0.11.5"
clap = { version = "4.5.19", features = ["derive"] }
anyhow = "1.0.89"
cudarc = { version = "0.12.1", features = ["cuda-12060", "cudnn"] }