[package]
name = "sd"
version = "0.1.0"
edition = "2021"

[lib]
name = "sd"
path = "src/lib.rs"

[[bin]]
name = "sd"
path = "src/main.rs"

[features]
default = []
cuda = ["cudarc", "cuda-kernels"]
metal = ["dep:metal"]

[dependencies]
safetensors = "0.4.5"
memmap2 = "0.9.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
tracing = "0.1"
tracing-subscriber = "0.3"
env_logger = "0.11.5"
clap = { version = "4.5.19", features = ["derive"] }
anyhow = "1.0.89"
criterion = { version = "0.5", features = ["html_reports"] }

# Optional dependencies based on features
cudarc = { version = "0.12.1", features = ["cuda-12060", "cudnn"], optional = true }
cuda-kernels = { path = "./cuda-kernels", optional = true }
metal = { version = "0.30.0", features = ["mps"], optional = true }

[target.'cfg(not(target_os = "macos"))'.dependencies]
cudarc = { version = "0.12.1", features = ["cuda-version-from-build-system", "cudnn"] }

[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "0.30.0", features = ["mps"] }

[target.'cfg(target_os = "macos")'.features]
default = ["metal"]

[target.'cfg(not(target_os = "macos"))'.features]
default = ["cuda"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "conv_benchmark"
harness = false
